# NativeMobileLibSample

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  appveyor.yml  build.sh  build_lib.sh  clean.sh  gen-amalgamation.sh  llvm-gcov.sh  merge_headers.sh  run-tests.sh  run_sample.sh  run_tests.sh
.ci/: before-install.sh  install.sh
.scripts/: build-android.sh  build-darwin.sh  build-ios.sh  build-linux.sh  get-os.sh
amalgamation/: notes.hpp
ci/: before-cache.sh  before-install.sh  brew-to-latest.sh  install-android-ndk.sh  install.sh
cmd_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmd_build/lib/: Makefile  cmake_install.cmake
cmd_build/sample/: Makefile  cmake_install.cmake  sample
gcov/: llvm-cov-8-gcov.sh  xcrun-llvm-cov-gcov.sh
include/: clock.hpp  database.hpp  database_cursor.hpp  database_statement.hpp  draft.hpp  foo.hpp  note.hpp  note_database_initializer.hpp  notes_interactor.hpp  notes_interactor_factory.hpp  std_optional_compat.hpp  time_format.hpp
lib/: CMakeLists.txt  lib-macro.cmake
lib/include/: cursor.hpp  database.hpp  database_client.hpp  database_cursor.hpp  database_exception.hpp  database_factory.hpp  database_note_repository.hpp  database_notes_repository.hpp  database_statement.hpp  draft_note.hpp  draft_notes_repository.hpp  draft_notes_repository_impl.hpp  drafts_repository.hpp  drafts_repository_factory.hpp  drafts_repository_impl.hpp  foo.hpp  in_mem_to_db_draft_notes_repository.hpp  in_memory_note_repository.hpp  invalid_draft_session_exception.hpp  note.hpp  note_repository.hpp  notes_interactor.hpp  notes_interactor_impl.hpp  notes_repository.hpp  notes_repository_factory.hpp  notes_repository_impl.hpp  sqlite_cursor.hpp  sqlite_database.hpp  sqlite_exception.hpp  sqlite_handler.hpp  sqlite_note_repository.hpp  sqlite_statement.hpp  statement.hpp
lib/src/: cursor.cpp  draft_note.cpp  foo.cpp  in_memory_note_repository.cpp  note.cpp  sqlite_cursor.cpp  sqlite_database.cpp  sqlite_exception.cpp  sqlite_handler.cpp  sqlite_note_repository.cpp  sqlite_statement.cpp  statement.cpp
lib/src/core/: compatible_bad_optional_access_exception.cpp  compatible_bad_optional_access_exception.hpp  illegal_state_exception.cpp  illegal_state_exception.hpp  initializer.cpp  initializer.hpp
lib/src/database/: database_client.cpp  database_cursor.cpp  database_exception.cpp  database_factory.cpp  database_statement.cpp  sqlite_cursor.cpp  sqlite_cursor.hpp  sqlite_database.cpp  sqlite_database.hpp  sqlite_exception.cpp  sqlite_exception.hpp  sqlite_statement.cpp  sqlite_statement.hpp
lib/src/note/: database_note_repository.cpp  database_notes_repository.cpp  draft_note.cpp  draft_notes_repository_impl.cpp  drafts_repository.hpp  drafts_repository_impl.cpp  drafts_repository_impl.hpp  in_mem_to_db_draft_notes_repository.cpp  in_memory_note_repository.cpp  incomplete_draft_exception.cpp  incomplete_draft_exception.hpp  invalid_draft_session_exception.cpp  mutable_draft.cpp  mutable_draft.hpp  note_database_initializer.cpp  notes_interactor_impl.cpp  notes_interactor_impl.hpp  notes_repository_impl.cpp  notes_repository_impl.hpp
lib/test/: CMakeLists.txt  foo_test.cpp
lib/test/database/: database_client_test.cpp
sample/: CMakeLists.txt  main.cpp
single_include/: notes.hpp
src/core/: compat_bad_optional_access_exception.cpp  compat_bad_optional_access_exception.hpp  exception_macros.hpp  include_macros.hpp
src/database/: database_client.cpp  database_cursor.cpp  database_exception.cpp  database_exception.hpp  database_statement.cpp  smart_c_statement.cpp  smart_c_statement.hpp  sqlite_cursor.cpp  sqlite_cursor.hpp  sqlite_database.cpp  sqlite_database.hpp  sqlite_exception.cpp  sqlite_exception.hpp  sqlite_statement.cpp  sqlite_statement.hpp
src/date/: date_iso.cpp  date_iso.hpp
src/note/: draft.cpp  drafts_repository.hpp  drafts_repository_factory.cpp  drafts_repository_factory.hpp  drafts_repository_impl.cpp  drafts_repository_impl.hpp  in_memory_note_repository.hpp  incomplete_draft_exception.cpp  mutable_draft.cpp  mutable_draft.hpp  note.cpp  note_database_initializer.cpp  notes_interactor_factory.cpp  notes_interactor_impl.cpp  notes_interactor_impl.hpp  notes_repository.hpp  notes_repository_factory.cpp  notes_repository_impl.cpp  notes_repository_impl.hpp
src/time/: clock_impl.cpp  clock_impl.hpp  time_format.cpp
test/: CMakeLists.txt  foo_test.cpp
test/core/: compat_bad_optional_access_exception_test.cpp  test_exceptions_macros.hpp
test/database/: database_client_test.cpp  database_client_test.hpp  database_exception_test.cpp  smart_c_statement_test.cpp  smart_c_statement_test.hpp  sqlite_cursor_test.cpp  sqlite_cursor_test.hpp  sqlite_database_test.cpp  sqlite_exception_test.cpp  sqlite_statement_test.cpp  sqlite_statement_test.hpp
test/note/: draft_test.cpp  drafts_repository_factory_test.cpp  drafts_repository_factory_test.hpp  drafts_repository_impl_test.cpp  drafts_repository_impl_test.hpp  incomplete_draft_exception_test.cpp  mutable_draft_test.cpp  note_database_initializer_test.cpp  note_database_initializer_test.hpp  note_test.cpp  notes_interactor_factory_test.cpp  notes_interactor_factory_test.hpp  notes_interactor_impl_test.cpp  notes_interactor_impl_test.hpp  notes_repository_factory_test.cpp  notes_repository_factory_test.hpp  notes_repository_impl_test.cpp  notes_repository_impl_test.hpp
test/note/mock/: drafts_repository_mock.hpp  notes_repository_mock.hpp
test/time/: clock_impl_test.cpp  time_format_test.cpp
test/time/mock/: clock_mock.hpp
xcode_build/: CMakeCache.txt  cmake_install.cmake
xcode_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode_build/lib/: cmake_install.cmake
xcode_build/lib/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  (+1 more)
xcode_build/native_mobile_lib_sample.xcodeproj/: project.pbxproj
xcode_build/sample/: cmake_install.cmake
xcode_build/sample/Debug/: sample
(+20 files in other folders)
